--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -29,7 +29,7 @@
 	            </button>
 	            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 	              <div class="navbar-nav">
-	                <a class="nav-link" href="..//paginas/quienes-somos.html">Quienes somos</a>
+	                <a class="nav-link" href="..//paginas/quienes-somoss.html">Quienes somos</a>
 	                <a class="nav-link" href="..//paginas/servicios.html">Servicios</a>
 	                <a class="nav-link" href="..//paginas/portfolio.html">Portfolio</a>
 	                <a class="nav-link" href="..//paginas/contacto.html">Contacto</a>
