--- a/paginas/portfolio.html
+++ b/paginas/portfolio.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
  	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
- 	<link rel="stylesheet" href="css/styles.css">
+ 	<link rel="stylesheet" href="../css/estilos.css">
  	<link rel="stylesheet" href="css/mediaQueries.css">
 	<title>Portfolio</title>
 </head>
@@ -28,7 +28,7 @@
 	            </button>
 	            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 	              <div class="navbar-nav">
-	                <a class="nav-link" href="..//paginas/quienes-somos.html">Quienes somos</a>
+	                <a class="nav-link" href="..//paginas/quienes-somoss.html">Quienes somos</a>
 	                <a class="nav-link" href="..//paginas/servicios.html">Servicios</a>
 	                <a class="nav-link" href="..//paginas/portfolio.html">Portfolio</a>
 	                <a class="nav-link" href="..//paginas/contacto.html">Contacto</a>
@@ -46,7 +46,7 @@
 		</div>
 
 	<div class="row">
-		<div class="portfolio__navstand m-3 m-auto">
+		<div class="portfolio__navstand">
 			<div class="portfolio__nombre m-3">
 				<h2>Diseño de Stands</h2>
 			</div>
@@ -60,7 +60,7 @@
 				</div>
 				<div id="carouselExampleIndicators" class="carousel slide col-lg-7 ms-auto" data-bs-ride="carousel">
 					<div class="carousel-indicators">
-					    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					    <button type="button" data-bcarouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 					    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
 					    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 					</div>
@@ -89,7 +89,7 @@
 	</div>
 
 	<div class="row">
-		<div class="portfolio__navproductos m-3 m-auto">
+		<div class="portfolio__navproductos">
 			<div class="portfolio__nombre m-3">
 				<h2>Diseño de Productos</h2>
 			</div>
@@ -131,7 +131,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="portfolio__navinteriores m-3 m-auto">
+		<div class="portfolio__navinteriores">
 			<div class="portfolio__nombre m-3">
 				<h2>Diseño de Interiores</h2>
 			</div>
@@ -174,7 +174,7 @@
 	</div>
 
 	<div class="row">
-			<div class="portfolio__navgrafico m-3 m-auto">
+			<div class="portfolio__navgrafico">
 				<div class="portfolio__nombre m-3">
 					<h2>Diseño Gráfico</h2>
 				</div>
