--- a/paginas/quienes-somoss.html
+++ b/paginas/quienes-somoss.html
@@ -18,26 +18,26 @@
 </head>
 <body>
 	<div class="container-fluid">
-	 <div class="row">
-      <header class="header col-12">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="..//index.html">Jocu</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-link" href="..//paginas/quienes-somoss.html">Quienes somos</a>
-                <a class="nav-link" href="..//paginas/servicios.html">Servicios</a>
-                <a class="nav-link" href="..//paginas/portfolio.html">Portfolio</a>
-                <a class="nav-link" href="..//paginas/contacto.html">Contacto</a>
-              </div>
-            </div>
-          </div>
-        </nav>
-      </header>
-    </div>  
+		<div class="row">
+	      <header class="header col-12">
+	        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+	          <div class="container-fluid">
+	            <a class="navbar-brand" href="..//index.html">Jocu</a>
+	            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+	              <span class="navbar-toggler-icon"></span>
+	            </button>
+	            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	              <div class="navbar-nav">
+	                <a class="nav-link" href="..//paginas/quienes-somoss.html">Quienes somos</a>
+	                <a class="nav-link" href="..//paginas/servicios.html">Servicios</a>
+	                <a class="nav-link" href="..//paginas/portfolio.html">Portfolio</a>
+	                <a class="nav-link" href="..//paginas/contacto.html">Contacto</a>
+	              </div>
+	            </div>
+	          </div>
+	        </nav>
+	      </header>
+	    </div>  
 
 		<div class="row text-center justify-content-center">
 			<div class="quienessomos col-lg-8 col-sm-10">
@@ -48,13 +48,8 @@
 
 		<div class="row justify-content-center m-3">
 			<div class="quienessomos__texto text-center col-lg-8 col-sm-10">
-				<p class="blockquote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat</p>
+				<p class="blockquote">Somos un estudio dedicado a la búsqueda de soluciones para nuestros clientes, utilizando nuestros
+				 <strong>conocimientos y experiencia</strong> para lograr los objetivos propuestos, siempre con la intención de satisfacer todas las necesidades que nuestros clientes requieran.</p>
 			</div>
 		</div>
 
@@ -66,10 +61,7 @@
 				<div class="quienessomos__profiletext text-center m-3">
 					<h2>Juan Cruz Ottonelli</h2>
 					<h3>Diseñador Industrial - Buenos Aires - 22 años</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.</p>
+					<p>Encargado de diseño de moviliario para oficinar y diseño de interiores, co-fundador de Jocu Design.</p>
 				</div>
 			</div>
 		</div>
@@ -82,11 +74,7 @@
 				<div class="quienessomos__profiletext text-center m-3">
 					<h2 >Octavio Cordeyro Equiza</h2>
 					<h3>Diseñador Industrial - Buenos Aires - 22 años</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur.</p>
+					<p>Encargado de diseño de stands y prodocutos, co-fundador de Jocu Design.</p>
 				</div>
 			</div>
 		</div>
