--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -18,27 +18,26 @@
 </head>
 <body>
 
-	<div class="container-fluid">
-	 <div class="row">
-      <header class="header col-12">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="..//index.html">Jocu</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-link" href="..//paginas/quienes-somoss.html">Quienes somos</a>
-                <a class="nav-link" href="..//paginas/servicios.html">Servicios</a>
-                <a class="nav-link" href="..//paginas/portfolio.html">Portfolio</a>
-                <a class="nav-link" href="..//paginas/contacto.html">Contacto</a>
-              </div>
-            </div>
-          </div>
-        </nav>
-      </header>
-    </div>
+			<div class="row">
+	      <header class="header col-12">
+	        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+	          <div class="container-fluid">
+	            <a class="navbar-brand" href="..//index.html">Jocu</a>
+	            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+	              <span class="navbar-toggler-icon"></span>
+	            </button>
+	            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	              <div class="navbar-nav">
+	                <a class="nav-link" href="..//paginas/quienes-somoss.html">Quienes somos</a>
+	                <a class="nav-link" href="..//paginas/servicios.html">Servicios</a>
+	                <a class="nav-link" href="..//paginas/portfolio.html">Portfolio</a>
+	                <a class="nav-link" href="..//paginas/contacto.html">Contacto</a>
+	              </div>
+	            </div>
+	          </div>
+	        </nav>
+	      </header>
+	    </div> 
 
 	<div class="serviciosmain  col-lg-8 col-sm-10">
 		<h1 class="servicios__titulo m-5">Servicios</h1>
@@ -47,11 +46,7 @@
 					<h2>Diseño de Stands</h2>
 				</div>
 				<div class="servicios__info">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur.</p>
+					<p>Desarrollo de propuestas para stand, partiendo desde un boceto 3D conceptual, del que posteriormente se proponen varias <strong> posibilidades estéticas tomando en cuenta el presupuesto, espacio, estructura y tiempo.</strong> Se presentan planos estructurales, grafica, listado de materiales y renders del Stand final.</p>
 				</div>
 			</div>
 
@@ -60,11 +55,7 @@
 					<h2>Diseño de Productos</h2>
 				</div>
 				<div class="servicios__info">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur.</p>
+					<p>Desarrollo de propuestas para stand, partiendo desde un boceto 3D conceptual, del que posteriormente se proponen varias <strong> posibilidades estéticas tomando en cuenta el presupuesto, materiales, estructura y tiempo.</strong> Se presentan planos estructurales, grafica, listado de materiales y renders del Producto final.</p>
 				</div>
 			</div>
 
@@ -73,11 +64,7 @@
 					<h2>Diseño de Interiores</h2>
 				</div>
 				<div class="servicios__info">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur.</p>
+					<p>Desarrollo de propuestas para interiores, partiendo desde un boceto 3D conceptual, del que posteriormente se proponen varias <strong>posibilidades estéticas tomando en cuenta el presupuesto, espacio, estructura y tiempo. Tambien se toma en cuenta si es un espacio a rediseñar.</strong> Se presentan planos estructurales, listado de materiales y renders del Interior final.</p>
 				</div>
 			</div>
 
@@ -86,11 +73,7 @@
 					<h2>Diseño Gráfico</h2>
 				</div>
 				<div class="servicios__info">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur.</p>
+					<p>Desarrollo de propuestas para stand, partiendo desde un boceto 3D conceptual, del que posteriormente se proponen varias <strong> posibilidades estéticas tomando en cuenta el presupuesto, implementaciones y tiempo.</strong> Se presentan planos estructurales, grafica, listado de materiales y renders del Producto final.</p>
 				</div>
 			</div>
 		</div>
