--- a/paginas/portfolio.html
+++ b/paginas/portfolio.html
@@ -37,7 +37,7 @@
 	          </div>
 	        </nav>
 	      </header>
-	    </div>  
+	    </div> 
 
 	<div class="row justify-content-center text-center">
 	 <div class="portfoliomain col-lg-8 col-sm-8 col-8">
@@ -52,15 +52,11 @@
 			</div>
 			<div class="row">
 				<div class="portfolio__info col-lg-4 m-auto">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur.</p>
+					<p>Se realizarón <strong>stands</strong> para clientes como Samsung, Fila, Shell, Telecom y Bodegas Bianchi.</p>
 				</div>
 				<div id="carouselExampleIndicators" class="carousel slide col-lg-7 ms-auto" data-bs-ride="carousel">
 					<div class="carousel-indicators">
-					    <button type="button" data-bcarouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					    <button type="button" data-bcarouselExampleIndicators data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 					    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
 					    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 					</div>
@@ -121,11 +117,7 @@
 					</button>
 				</div>
 				<div class="portfolio__info col-lg-4 m-auto">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur.</p>	
+					<p>Se realizarón <strong>productos</strong> para clientes como Bic, Piaggio Vespa, Nvidia y Stanley.</p>	
 				</div>
 			</div>
 		</div>
@@ -137,11 +129,7 @@
 			</div>
 			<div class="row">
 				<div class="portfolio__info col-lg-4 m-auto">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur.</p>
+					<p>Se realizarón <strong>interiores</strong> para clientes como Banco Galicia y FR Racing.</p>
 				</div>
 				<div id="carouselExampleIndicators" class="carousel slide col-lg-7 ms-auto" data-bs-ride="carousel">
 					<div class="carousel-indicators">
@@ -207,11 +195,7 @@
 							  </button>
 						</div>
 						<div class="portfolio__info col-lg-4 m-auto">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur.</p>
+							<p>Se realizarón <strong>graficas</strong> para clientes como Banco Galicia, FR Racing, Samsung y Fila.</p>
 						</div>
 					</div>
 				</div>
